--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ footer{text-align:center;color:var(--muted)}
   <section class="card">
     <h2>Commencer le questionnaire</h2>
     <p>Répondez à une série de questions (1 à 5). Une seule question s'affiche à la fois. À la fin, vous obtenez votre code PMP et un rapport détaillé.</p>
-    <a class="btn" href="quiz.html">👉 Lancer le questionnaire</a>
+    <a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a>
   </section>
 </main>
 <footer class="wrap">© Académie de Performances</footer>
