--- a/profils/ICVF.html
+++ b/profils/ICVF.html
@@ -18,12 +18,12 @@ header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0
   <img src="../assets/banner_results.jpg" alt="Bannière résultats" class="hero" style="width:100%;border-radius:10px">
   <div class="wrap" style="padding-top:10px">
     <h1>ICVF — L’artisan sensible</h1>
-    <a href="../quiz.html" style="display:inline-block;margin-top:10px;background:#0E1116;color:#fff;text-decoration:none;padding:10px 14px;border-radius:10px;font-weight:700">↩︎ Reprendre le questionnaire</a>
+    <a href="../pmp_quiz_academie_performances.html" style="display:inline-block;margin-top:10px;background:#0E1116;color:#fff;text-decoration:none;padding:10px 14px;border-radius:10px;font-weight:700">↩︎ Reprendre le questionnaire</a>
   </div>
 </header>
 <main class="wrap"><section class="card">
 <h2>Chapitre détaillé</h2>
-<p>Cette page présente votre profil PMP avec une description narrative, vos forces, vos points de vigilance et des clés pratiques. (Version corrective V5.3)</p>
+<p>Cette page présente votre profil PMP avec une description narrative, vos forces, vos points de vigilance et des clés pratiques. (Version corrective V5.3b)</p>
 <div style="border-left:4px solid #0E1116;background:#F5F7FD;padding:12px;border-radius:10px;margin-top:10px">
 <strong>🧰 3 clés</strong><br>1) Appliquez une micro‑amélioration par semaine.<br>2) Intégrez l’impact humain dans vos décisions.<br>3) Célébrez les progrès concrets.</div>
 </section></main>
