--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Académie de Performances – PMP</title>
-<meta name="description" content="Questionnaire PMP – Profil Mental de Performance. Séquentiel, résultat immédiat.">
+<meta name="description" content="Questionnaire PMP – Profil Mental de Performance.">
 <style>
-:root{--brand:#0E1116;--accent:#2B79C2;--bg:#F6F7FB;--surface:#fff;--muted:#6B7280;--radius:16px;--max:980px}
+:root{--brand:#0E1116;--bg:#F6F7FB;--surface:#fff;--muted:#6B7280;--radius:16px;--max:980px}
 *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif;background:var(--bg);color:#0E1116}
 header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:12px 16px}
 .wrap{max-width:var(--max);margin:0 auto;padding:0 16px 48px}
@@ -25,7 +25,7 @@ footer{text-align:center;color:var(--muted)}
 <main class="wrap">
   <section class="card">
     <h2>Commencer le questionnaire</h2>
-    <p>Répondez à une série de questions (1 à 5). Une seule question s'affiche à la fois. À la fin, vous obtenez votre code PMP et un rapport détaillé.</p>
+    <p>Répondez à une série de questions (échelle 1 à 5). Une seule question s'affiche à la fois. À la fin, vous obtenez votre code PMP et un rapport détaillé.</p>
     <a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a>
   </section>
 </main>
