--- a/pmp_quiz_academie_performances_inline.html
+++ b/pmp_quiz_academie_performances_inline.html
@@ -1,3 +1,43 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>PMP – Questionnaire (secours)</title>
+<meta name="description" content="Version de secours inline pour compatibilité.">
+<style>:root{--bg:#F6F7FB;--surface:#fff;--text:#0E1116;--muted:#6B7280;--brand:#0E1116;--radius:14px;--max:860px}
+*{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif}
+header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0 12px}
+.wrap{max-width:var(--max);margin:0 auto;padding:0 16px 48px}
+.banner{width:100%;display:block}
+.card{background:var(--surface);border-radius:var(--radius);box-shadow:0 10px 28px rgba(0,0,0,.08);padding:22px;margin-top:16px}
+h1{margin:.6rem 0 .2rem}
+.muted{color:#BFC6D5}
+.progress{height:8px;background:#E9ECF4;border-radius:999px;overflow:hidden;margin:12px 0 18px}
+.progress>span{display:block;height:100%;width:0;background:var(--brand);transition:width .3s}
+.q{font-size:1.15rem;margin:.2rem 0 .6rem}
+.scale{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:8px}
+input[type=radio]{accent-color:var(--brand)}
+.btns{display:flex;gap:10px;margin-top:18px}
+.btn{display:inline-flex;gap:.5rem;align-items:center;background:var(--brand);color:#fff;border:0;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer}
+.btn.secondary{background:#E9ECF5;color:#111}
+.err{padding:10px;border-left:4px solid #b00020;background:#fdecec;border-radius:10px;margin-top:10px}
+</style>
+</head>
+<body>
+<header>
+  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
+  <div class="wrap" style="padding-top:10px">
+    <h1>Questionnaire PMP (version de secours)</h1>
+    <p class="muted">Une question à la fois • Pas de retour arrière • 1=Pas d'accord … 5=Tout à fait d'accord</p>
+  </div>
+</header>
+<main class="wrap">
+  <div class="progress"><span id="bar"></span></div>
+  <section class="card">
+    <div id="screen"></div>
+  </section>
+</main>
+<script>
 
 console.log("[PMP] script.js chargé");
 
@@ -141,3 +181,7 @@ document.addEventListener('DOMContentLoaded', function(){
   console.log("[PMP] DOMContentLoaded");
   render();
 });
+
+</script>
+</body>
+</html>
