--- a/profils/EGLF.html
+++ b/profils/EGLF.html
@@ -23,8 +23,6 @@ header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0
 </header>
 <main class="wrap"><section class="card">
 <h2>Chapitre détaillé</h2>
-<p>Cette page présente votre profil PMP avec une description narrative, vos forces, vos points de vigilance et des clés pratiques. (Version corrective V5.3b)</p>
-<div style="border-left:4px solid #0E1116;background:#F5F7FD;padding:12px;border-radius:10px;margin-top:10px">
-<strong>🧰 3 clés</strong><br>1) Appliquez une micro‑amélioration par semaine.<br>2) Intégrez l’impact humain dans vos décisions.<br>3) Célébrez les progrès concrets.</div>
+<p>Cette page présente votre profil PMP avec une description narrative, vos forces, vos points de vigilance et des clés pratiques. (Version corrective V5.3c)</p>
 </section></main>
 </body></html>
