--- a/profils/ECVF.html
+++ b/profils/ECVF.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PMP – ECVF – Le connecteur expressif</title>
-<meta name="description" content="Profil PMP ECVF – rapport détaillé.">
-<style>
-:root{--bg:#F6F7FB;--surface:#fff;--text:#0E1116;--muted:#6B7280;--brand:#0E1116;--radius:14px;--max:860px}
-*{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif;line-height:1.58}
-header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0 10px}
-.wrap{max-width:var(--max);margin:0 auto;padding:0 16px 48px}
-.hero{max-width:860px;margin:0 auto}
-.card{background:var(--surface);border-radius:var(--radius);box-shadow:0 10px 28px rgba(0,0,0,.08);padding:22px;margin-top:16px}
-</style>
-</head>
-<body>
-<header>
-  <img src="../assets/banner_results.jpg" alt="Bannière résultats" class="hero" style="width:100%;border-radius:10px">
-  <div class="wrap" style="padding-top:10px">
-    <h1>ECVF — Le connecteur expressif</h1>
-    <a href="../pmp_quiz_academie_performances.html" style="display:inline-block;margin-top:10px;background:#0E1116;color:#fff;text-decoration:none;padding:10px 14px;border-radius:10px;font-weight:700">↩︎ Reprendre le questionnaire</a>
-  </div>
-</header>
-<main class="wrap"><section class="card">
-<h2>Chapitre détaillé</h2>
-<p>Cette page présente votre profil PMP avec une description narrative, vos forces, vos points de vigilance et des clés pratiques. (Version corrective V5.3c)</p>
-</section></main>
-</body></html>
+<!DOCTYPE html><meta charset="utf-8"><title>ECVF - PMP</title>
+<link rel="stylesheet" href="../assets/banner_results.css" onerror="void(0)">
+<div style="max-width:860px;margin:0 auto;padding:16px">
+<img src="../assets/banner_results.jpg" alt="Banniere resultats" style="width:100%;border-radius:10px">
+<h1>ECVF — Le connecteur expressif</h1>
+<p>Page resultat de demonstration (V5.3d). Le texte detaille viendra ici.</p>
+<p><a href="../pmp_quiz_academie_performances.html">↩︎ Reprendre le questionnaire</a></p>
+</div>
