--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Académie de Performances – PMP</title>
+<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Academie de Performances – PMP</title>
 <style>
 :root{--brand:#0E1116;--bg:#F6F7FB;--surface:#fff;--muted:#6B7280;--radius:16px;--max:980px}
 *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif;background:var(--bg);color:#0E1116}
@@ -11,24 +9,22 @@ header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:12p
 .card{background:var(--surface);border-radius:var(--radius);box-shadow:0 8px 28px rgba(0,0,0,.08);padding:22px;margin-top:16px}
 .banner{width:100%;max-width:960px;border-radius:12px;display:block;margin:8px auto}
 .btn{display:inline-flex;gap:.5rem;align-items:center;background:var(--brand);color:#fff;border:0;border-radius:12px;padding:14px 18px;font-weight:700;text-decoration:none}
-.btn.secondary{background:#E9ECF5;color:#111}
-.small{font-size:.92rem;color:#444}
-</style>
-</head>
+.btn:hover{opacity:.92}
+footer{text-align:center;color:var(--muted)}
+</style></head>
 <body>
 <header class="wrap">
-  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
+  <img src="assets/banner.jpg" alt="Banniere PMP" class="banner">
   <h1>Profil Mental de Performance (PMP)</h1>
-  <p>Académie de Performances – Questionnaire pédagogique</p>
+  <p>Academie de Performances – Questionnaire pedagogique</p>
 </header>
 <main class="wrap">
   <section class="card">
     <h2>Commencer le questionnaire</h2>
-    <p>Version recommandée (JavaScript externe) :</p>
-    <p><a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a></p>
-    <p class="small">Si rien ne s'affiche sur votre navigateur, utilisez la version de secours :</p>
-    <p><a class="btn secondary" href="pmp_quiz_academie_performances_inline.html">⚙️ Version de secours (inline)</a></p>
+    <p>Version recommandee (JS externe) :</p>
+    <a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a>
+    <p style="margin-top:10px">Version de secours : <a class="btn" style="background:#E9ECF5;color:#111" href="pmp_quiz_academie_performances_inline.html">⚙️ Inline</a></p>
   </section>
 </main>
-</body>
-</html>
+<footer class="wrap">© Academie de Performances</footer>
+</body></html>
