--- a/pmp_quiz_academie_performances.html
+++ b/pmp_quiz_academie_performances.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PMP – Questionnaire</title>
-<meta name="description" content="Questionnaire PMP séquentiel, une question à la fois.">
 <style>:root{--bg:#F6F7FB;--surface:#fff;--text:#0E1116;--muted:#6B7280;--brand:#0E1116;--radius:14px;--max:860px}
 *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif}
 header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0 12px}
@@ -21,23 +18,21 @@ input[type=radio]{accent-color:var(--brand)}
 .btn{display:inline-flex;gap:.5rem;align-items:center;background:var(--brand);color:#fff;border:0;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer}
 .btn.secondary{background:#E9ECF5;color:#111}
 .err{padding:10px;border-left:4px solid #b00020;background:#fdecec;border-radius:10px;margin-top:10px}
-</style>
-</head>
+</style></head>
 <body>
 <header>
-  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
+  <img src="assets/banner.jpg" alt="Banniere PMP" class="banner">
   <div class="wrap" style="padding-top:10px">
     <h1>Questionnaire PMP</h1>
-    <p class="muted">Une question à la fois • Pas de retour en arrière • 1=Pas d'accord … 5=Tout à fait d'accord</p>
+    <p class="muted">Une question a la fois • Pas de retour en arriere • 1=Pas d'accord … 5=Tout a fait d'accord</p>
   </div>
 </header>
 <main class="wrap">
   <div class="progress"><span id="bar"></span></div>
   <section class="card">
-    <noscript><div class="err">JavaScript est désactivé. Activez‑le ou utilisez la <a href="pmp_quiz_academie_performances_inline.html">version de secours</a>.</div></noscript>
+    <noscript><div class="err">JavaScript est desactive. Activez-le ou utilisez la <a href="pmp_quiz_academie_performances_inline.html">version inline</a>.</div></noscript>
     <div id="screen"></div>
   </section>
 </main>
 <script src="script.js" defer></script>
-</body>
-</html>
+</body></html>
