--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Academie de Performances – PMP</title>
+<!DOCTYPE html><html lang="fr"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Académie de Performances – PMP</title>
 <style>
 :root{--brand:#0E1116;--bg:#F6F7FB;--surface:#fff;--muted:#6B7280;--radius:16px;--max:980px}
 *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif;background:var(--bg);color:#0E1116}
@@ -14,17 +14,16 @@ footer{text-align:center;color:var(--muted)}
 </style></head>
 <body>
 <header class="wrap">
-  <img src="assets/banner.jpg" alt="Banniere PMP" class="banner">
+  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
   <h1>Profil Mental de Performance (PMP)</h1>
-  <p>Academie de Performances – Questionnaire pedagogique</p>
+  <p>Académie de Performances – Questionnaire pédagogique</p>
 </header>
 <main class="wrap">
   <section class="card">
     <h2>Commencer le questionnaire</h2>
-    <p>Version recommandee (JS externe) :</p>
+    <p>Répondez à une série de questions (1 à 5). Une seule question s'affiche à la fois. À la fin, vous obtenez votre code PMP et un rapport détaillé.</p>
     <a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a>
-    <p style="margin-top:10px">Version de secours : <a class="btn" style="background:#E9ECF5;color:#111" href="pmp_quiz_academie_performances_inline.html">⚙️ Inline</a></p>
   </section>
 </main>
-<footer class="wrap">© Academie de Performances</footer>
+<footer class="wrap">© Académie de Performances</footer>
 </body></html>
