--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html><html lang="fr"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Académie de Performances – PMP</title>
-<style>
-:root{--brand:#0E1116;--bg:#F6F7FB;--surface:#fff;--muted:#6B7280;--radius:16px;--max:980px}
-*{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif;background:var(--bg);color:#0E1116}
-header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:12px 16px}
-.wrap{max-width:var(--max);margin:0 auto;padding:0 16px 48px}
-.card{background:var(--surface);border-radius:var(--radius);box-shadow:0 8px 28px rgba(0,0,0,.08);padding:22px;margin-top:16px}
-.banner{width:100%;max-width:960px;border-radius:12px;display:block;margin:8px auto}
-.btn{display:inline-flex;gap:.5rem;align-items:center;background:var(--brand);color:#fff;border:0;border-radius:12px;padding:14px 18px;font-weight:700;text-decoration:none}
-.btn:hover{opacity:.92}
-footer{text-align:center;color:var(--muted)}
-</style></head>
-<body>
-<header class="wrap">
-  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
-  <h1>Profil Mental de Performance (PMP)</h1>
-  <p>Académie de Performances – Questionnaire pédagogique</p>
-</header>
-<main class="wrap">
-  <section class="card">
-    <h2>Commencer le questionnaire</h2>
-    <p>Répondez à une série de questions (1 à 5). Une seule question s'affiche à la fois. À la fin, vous obtenez votre code PMP et un rapport détaillé.</p>
-    <a class="btn" href="pmp_quiz_academie_performances.html">👉 Lancer le questionnaire</a>
-  </section>
-</main>
-<footer class="wrap">© Académie de Performances</footer>
-</body></html>
+<!doctype html><meta charset="utf-8"><meta http-equiv="refresh" content="0; url=PMP_profil_autonome.html">
