--- a/pmp_quiz_academie_performances.html
+++ b/pmp_quiz_academie_performances.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html><html lang="fr"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="fr"><head>
+<meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>PMP – Questionnaire</title>
-<link rel="preload" href="script.js" as="script">
+<link as="script" href="script.js" rel="preload"/>
 <style>
 :root{--bg:#F6F7FB;--surface:#fff;--text:#0E1116;--muted:#6B7280;--brand:#0E1116;--radius:14px;--max:860px}
 *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif}
@@ -22,18 +23,18 @@ input[type=radio]{accent-color:var(--brand)}
 </style></head>
 <body>
 <header>
-  <img src="assets/banner.jpg" alt="Bannière PMP" class="banner">
-  <div class="wrap" style="padding-top:10px">
-    <h1>Questionnaire PMP</h1>
-    <p class="muted">Une question à la fois • Pas de retour en arrière • 1=Pas d'accord … 5=Tout à fait d'accord</p>
-  </div>
+<img alt="Bannière PMP" class="banner" src="assets/banner.jpg"/>
+<div class="wrap" style="padding-top:10px">
+<h1>Questionnaire PMP</h1>
+<p class="muted">Une question à la fois • Pas de retour en arrière • 1=Pas d'accord … 5=Tout à fait d'accord</p>
+</div>
 </header>
 <main class="wrap">
-  <div class="progress"><span id="bar"></span></div>
-  <section class="card">
-    <noscript><div class="err">JavaScript est désactivé. Activez‑le pour passer le test.</div></noscript>
-    <div id="screen"></div>
-  </section>
+<div class="progress"><span id="bar"></span></div>
+<section class="card">
+<noscript><div class="err">JavaScript est désactivé. Activez‑le pour passer le test.</div></noscript>
+<div id="screen"></div>
+</section>
 </main>
-<script src="script.js" defer></script>
-</body></html>
+<script defer="" src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script></body></html>
