--- a/profils/IGLP.html
+++ b/profils/IGLP.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fr"><head>
 <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>PMP – IGLP – Le stratège discret</title>
@@ -14,7 +15,7 @@ header{background:linear-gradient(180deg,#0E1116,#1B2230);color:#fff;padding:0 0
 .note{border-left:4px solid #0E1116;background:#F5F7FD;padding:12px;border-radius:10px;margin-top:14px}
 h1{margin:0.6rem 0 0.2rem} h2{margin:1.1rem 0 .3rem} .small{color:#6B7280;font-size:.92rem}
 </style></head>
-<body>
+<body><div id="pmp-axis-bars"></div>
 <header>
 <img alt="Bannière résultats" class="hero" src="../assets/banner_results.jpg" style="width:100%;border-radius:10px"/>
 <div class="wrap" style="padding-top:10px">
@@ -38,4 +39,4 @@ h1{margin:0.6rem 0 0.2rem} h2{margin:1.1rem 0 .3rem} .small{color:#6B7280;font-s
 <div class="note"><strong>🧰 3 clés de performance</strong><ol><li><strong>Crée un rituel opposé</strong> à ton réflexe habituel (planifier vs. improviser) et tiens‑le 4 semaines.</li><li><strong>Décisions 360°</strong> : ajoute systématiquement un point « données » et un point « humains » à tes arbitrages.</li><li><strong>Carnet de progrès</strong> : consigne 3 avancées par semaine et célèbre‑les avec ton équipe ou tes proches.</li></ol></div>
 </section>
 </main>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script></body></html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script><script src="axis-bars.js"></script></body></html>
