--- a/profils/EGLP.html
+++ b/profils/EGLP.html
@@ -39,4 +39,4 @@ h1{margin:0.6rem 0 0.2rem} h2{margin:1.1rem 0 .3rem} .small{color:#6B7280;font-s
 <div class="note"><strong>🧰 3 clés de performance</strong><ol><li><strong>Crée un rituel opposé</strong> à ton réflexe habituel (planifier vs. improviser) et tiens‑le 4 semaines.</li><li><strong>Décisions 360°</strong> : ajoute systématiquement un point « données » et un point « humains » à tes arbitrages.</li><li><strong>Carnet de progrès</strong> : consigne 3 avancées par semaine et célèbre‑les avec ton équipe ou tes proches.</li></ol></div>
 </section>
 </main>
-<script src="axis-bars.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script></body></html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script><script src="axis-bars.js"></script></body></html>
