--- a/pmp_quiz_academie_performances.html
+++ b/pmp_quiz_academie_performances.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fr"><head>
 <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>PMP – Questionnaire</title>
@@ -37,4 +38,4 @@ input[type=radio]{accent-color:var(--brand)}
 </section>
 </main>
 <script defer="" src="script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script></body></html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script><script src="export-pdf.js"></script><script src="pmp-capture.js"></script></body></html>
